Prepare for release 8 beta 2
- Rewritten logic to avoid static methods and fields as much as possible
- Slightly tweaked UI - status bar and action bar are now tinted
- Enable animations in RecyclerView

TODO:
- Fix grades save/restore
- Fix subject divider lines
- Fix weird layout bugs (extra spinner width, etc.)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,15 @@
-//noinspection GradleCompatible
 apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
     defaultConfig {
-        applicationId "tk.aureljared.pisaygwa"
-        minSdkVersion 21
+        applicationId "gq.jared.pisaygwa"
+        minSdkVersion 19
         targetSdkVersion 26
-        versionCode 8
-        versionName "release 8"
+        versionCode 9
+        versionName "r8b2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -21,12 +20,17 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:26.0.2'
-    compile 'com.android.support:cardview-v7:26.0.2'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+}
+
+gradle.projectsEvaluated {
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+    }
 }
