--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="tk.aureljared.pisaygwa" >
-
-    <uses-sdk android:minSdkVersion="21"
-        android:targetSdkVersion="26" />
+    package="gq.jared.pisaygwa" >
 
     <application
         android:allowBackup="true"
@@ -13,8 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity"
-            android:configChanges="orientation|keyboardHidden" >
+        <activity
+            android:name="gq.jared.pisaygwa.MainActivity"
+            android:configChanges="orientation|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
