--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,10 +4,10 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "gq.jared.pisaygwa"
-        minSdkVersion 19
+        minSdkVersion 17
         targetSdkVersion 26
-        versionCode 9
-        versionName "8"
+        versionCode 10
+        versionName "9"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -15,6 +15,9 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            applicationIdSuffix '.debug'
         }
     }
 }
