--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:configChanges="orientation|keyboardHidden">
+        android:supportsRtl="true">
         <activity
             android:name=".MainActivity"
-            android:theme="@style/MainTheme">
+            android:theme="@style/MainTheme"
+            android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -23,6 +23,7 @@
         <activity
             android:name=".AboutActivity"
             android:theme="@style/AboutTheme"
+            android:configChanges="orientation|screenSize"
             android:label="@string/action_about"
             android:parentActivityName="gq.jared.pisaygwa.MainActivity" />
     </application>
