--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,18 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
-        buildToolsVersion "27.0.3"
+        buildToolsVersion "28.0.3"
         applicationId "gq.jared.pisaygwa"
         minSdkVersion 17
-        targetSdkVersion 27
-        versionCode 12
-        versionName "11"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        targetSdkVersion 28
+        versionCode 14
+        versionName "14"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        resConfigs "en"
     }
     buildTypes {
         release {
@@ -27,20 +29,23 @@ android {
             applicationIdSuffix '.debug'
         }
     }
+    buildToolsVersion '28.0.3'
+    dexOptions {
+    }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:27.1.0'
-    implementation 'com.android.support:design:27.1.0'
-    implementation 'com.android.support:cardview-v7:27.1.0'
-    implementation 'com.android.support:recyclerview-v7:27.1.0'
-    implementation 'de.psdev.licensesdialog:licensesdialog:1.8.3'
-    implementation 'com.github.javiersantos:AppUpdater:2.6.5'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
+    implementation 'com.google.android.material:material:1.1.0-alpha02'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha01'
+    implementation 'com.github.javiersantos:AppUpdater:2.7'
 }
 
 gradle.projectsEvaluated {
@@ -53,4 +58,7 @@ android.applicationVariants.all { variant ->
     variant.outputs.all {
         outputFileName = "PisayGWA-${variant.buildType.name}-r${android.defaultConfig.versionName}.apk"
     }
+}
+repositories {
+    mavenCentral()
 }
