chore: Update Gradle, Kotlin, AndroidX

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,3 +26,5 @@ org.gradle.daemon=true
 org.gradle.configureondemand=true
 android.useAndroidX=true
 android.enableJetifier=true
+
+android.debug.obsoleteApi=true
